--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,16 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'kotlin-android'
+    id("com.google.gms.google-services")
+    id 'com.google.dagger.hilt.android'
 }
 android {
     namespace 'com.example.taskspro'
     compileSdk 33
 
+    buildFeatures{
+        viewBinding = true
+    }
     defaultConfig {
         applicationId "com.example.taskspro"
         minSdk 24
@@ -39,6 +44,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-auth-ktx:22.1.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -51,4 +58,24 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.5.2'
     implementation "androidx.room:room-ktx:2.5.2"
     kapt "androidx.room:room-compiler:2.5.2"
+
+    implementation(platform("com.google.firebase:firebase-bom:32.2.0"))
+    implementation("com.google.firebase:firebase-analytics-ktx")
+
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+    implementation 'com.google.dagger:hilt-android:2.47'
+    kapt 'com.google.dagger:hilt-compiler:2.47'
+
+    // For instrumentation tests
+    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.47'
+    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.47'
+
+    // For local unit tests
+    testImplementation 'com.google.dagger:hilt-android-testing:2.47'
+    kaptTest 'com.google.dagger:hilt-compiler:2.47'
+    implementation "androidx.activity:activity-ktx:1.7.2"
+
 }
